--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-spring.application.name=game
-server.port=8888
+spring.application.name=game.panzer
+server.port=6969
+server.ssl.key-store=classpath:keystore/keystore.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.enabled=true
