--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=game.panzer
 server.port=6969
 server.ssl.key-store=classpath:keystore/keystore.p12
+server.ssl.key-alias=vibroapp
+server.ssl.key-store-password=nFnmzb9R2H
 server.ssl.key-store-type=PKCS12
 server.ssl.enabled=true
+
